<resources>
    <string name="app_name">Messenger</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">E-Mail</string>
    <string name="chatsLabel">Chats</string>
    <string name="searchLabel">Search</string>
    <string name="addLabel">Add</string>
    <string name="profileLabel">Profile</string>
    <string name="settingsLabel">Settings</string>
    <string name="serverErrorMessage">Server Fehler - Bitte versuche es später erneut.</string>
    <string name="token_key">current_fcm_token</string>
    <string name="preferences_file_key">com.saylonn.messenger.prefs</string>
    <string name="fcm_token_default_value">none</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>