<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/pageChats"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chatsLabel"/>

    <item
        android:id="@+id/pageSearch"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/searchLabel"/>

    <item
        android:id="@+id/pageAdd"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/addLabel" />

    <item
        android:id="@+id/pageProfile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profileLabel"/>

    <item
        android:id="@+id/pageSettings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settingsLabel"/>

</menu>